# internnav_on_go2_prj

./: .gitignore  本地部署步骤与任务处理逻辑总结.md
InternNav/: .gitmodules  CITATION.cff  LICENSE  README.md  setup.py
InternNav-deploy/: LICENSE  Readme.md  Readme_zh.md
InternNav-deploy/onboard/: go2_camera_publisher.py  realsense_publisher.py  ros_bridge.py  sport_state_publisher.py  start_robot.sh  unitree_driver.py
InternNav/docs/: changelog.md  compatibility.md
InternNav/internnav/agent/: dialog_agent.py  internvla_n1_agent_realworld.py
InternNav/internnav/dataset/: cma_lerobot_dataset.py  internvla_n1_lerobot_dataset.py  navdp_lerobot_dataset.py  rdp_lerobot_dataset.py  vlln_lerobot_dataset.py
InternNav/internnav/habitat_extensions/vlln/: README.md  measures.py
InternNav/internnav/habitat_extensions/vln/: habitat_vln_evaluator.py  measures.py
InternNav/internnav/trainer/: internvla_n1_argument.py  navdp_trainer.py
InternNav/internnav/utils/: loader.py
InternNav/scripts/eval/: eval.py  start_server.py
InternNav/scripts/realworld/: http_internvla_client.py  http_internvla_server.py
example/go2/front_camera/: camera_opencv.py
go2_teleop_lerobot_tools/: README.md  pyproject.toml
go2_teleop_lerobot_tools/docs/: raw_log_schema.md
go2_teleop_lerobot_tools/examples/sample_session/: depth_front.csv  instruction.json  odom.csv  rgb_front.csv  session_meta.json  teleop_cmd.csv
go2_teleop_lerobot_tools/src/go2_teleop_lerobot_tools/: __init__.py  aligner.py  cli.py  labels.py  lerobot_export.py  recorder_scaffold.py  schema.py  utils.py
(+10 files in other folders)
